# habctl

./: COPYRIGHT  Cargo.toml  README.md  habctl.toml
scripts/: mount-devices  share-devices
src/: broadcast.rs  config.rs  flow.rs  hardware.rs  main.rs  system.rs  topic.rs  web.rs
src/bytes/: mod.rs  reader.rs
src/electrical/: mppt.rs
src/flow/: flow.rs  inflow.rs  mod.rs  outflow.rs
src/hardware/: config.rs  device.rs  imu.rs  mod.rs  serial.rs
src/hardware/imu/: mod.rs
src/hardware/serial/: mod.rs  uart.rs
src/hardware/serial/test/: mod.rs
src/hardware/victron/: mk3.rs  mod.rs  ve_direct.rs
src/http/: mod.rs  serve_dir.rs
src/network/: socket.rs
src/phy/serial/: uart.rs
src/phy/victron/: ve_direct.rs
src/telemetry/: mod.rs  solar.rs  time.rs
src/test/stub/: mod.rs
src/test/stub/phy/serial/: uart.rs
src/ui/: socket.rs
src/web/: api.rs  config.rs  files.rs  mod.rs  socket.rs
test/: usb-VictronEnergy_BV_VE_Direct_cable_VE46V0KW-if00-port0  usb-VictronEnergy_BV_VE_Direct_cable_VE47E73U-if00-port0
