[package]
name = "habctl"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/davidkern/habctl"
description = "HAB truck camper backend services."

[dependencies]
log = "0.4.13"
mio-serial = "3.3.1"
tokio = { version = "1.0.2", features = ["full"] }
pretty_env_logger = "0.4.0"
warp = "0.3.0"
