[package]
name = "habctl"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/davidkern/habctl"
description = "HAB truck camper backend services."

[dependencies]
anyhow = "1.0.38"
bincode = "1.3.2"
bitflags = "1.2.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4.13"
mio-serial = "3.3.1"
nom = "6.1.2"
once_cell = "1.5.2"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1.0.2", features = ["full"] }
toml = "0.5.8"
warp = "0.3.0"
